style.css
/* Setting fonts, text color and section size for main body sections of the webpage*/

body {
    font-family: 'Libre Franklin', sans-serif;
}

.logo {
    font-family: 'Black Ops One', cursive;
    color: #152951;
  }

.section {
    height:80vh;
    width: 100vw;
    padding: 25px;
    margin: 20px;
}

.section h2 {

}

  .section p {

  }

.section_content {
    
    font-family: 'PT Sans Narrow', sans-serif;
    font-size: 110%;
}


/* Jumbotron specific formatting */
  
.jumbotron {
    background: url("pics/tear-out_1.jpg") no-repeat center center;
    background-size: cover;
    min-height: 700px;
    font-weight: bold;
  }

#jumbotron_content {
    margin-top: 120px;
}

.jumbotron p {
    font-size: 120%;
}

.jumbotron .logo {
    font-size: 250%;
}

/* ------------------------------------------------------------------------------------------ */


/* Re-useable elements/class styles */

.button {
    background-color: #152951;
    border-color: #152951;
}

.button:hover {
    background-color: #00e6e6;
    border-color: #00e6e6;
    color: #152951;
}

.has_border {
    border: 1px solid black;
    margin-left: 20px;
    padding:20px;
    width: 45vw;
}

.bold {
    font-weight: bold;
}

/* ------------------------------------------------------------------------------------------ */

/* Navbar specific formatting */

.navbar .logo {
    font-size: 200%;
    color: #152951;
}

#contact a {
    font-size: 120%;
    color: #152951;
}

#contact a:hover {
    color: #00e6e6;
}

/* ------------------------------------------------------------------------------------------ */

/* Additional formatting */

#business .has_border {
    float: left;
}

#business img {
    float: right;
    width: 45vw;
    margin-right: 20px;
}

#business .button {
    margin: 15px;
}

#our_team {
    margin-top: 20px;
    text-align: center;
}

#our_team .card {
    margin: auto;
}







  

